# W-MIDI

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  Python3 Installation.txt  README.md  README.txt  README_EN.txt  RELEASE_CHECKLIST.md  config.example.json  midi_input_tester.py  midi_wled_gui.py  pyproject.toml  requirements.txt  wled_midi_udp_bridge.py
midi_wled_bridge/: __init__.py  __main__.py  bridge.py  cli.py  colors.py  constants.py  gui.py  midi_tester.py  palette.py  ports.py
packaging/windows/: build_w_midi_launcher.bat
palettes/: velocity_palette.txt
scripts/windows/: midi_input_tester.bat  start_gui.bat  start_wled_midi_bridge.bat  test_wled_udp.bat
tests/: test_gui_log_popout.py  test_gui_readme_help.py  test_gui_runtime_section.py  test_gui_tk_options.py  test_live_telemetry.py  test_matrix_removed.py  test_midi_channel_cli_gui.py  test_midi_channel_mapping.py  test_release_branding.py
tools/windows/: GuiLauncher.cs
